<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="45dp"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="ubusetas.ubu.adrian.proyectoubusetas.informacion.MostrarInformacionSeta">

        <TextView
            android:id="@+id/textView_DescripcionSeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/descripcion_seta"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView_textoDescripcionSeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_DescripcionSeta"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/textView_GeneroSeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_textoDescripcionSeta"
            android:layout_marginTop="5dp"
            android:text="@string/genero_seta"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView_textoGeneroSeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_GeneroSeta"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/textView_ComestibilidadSeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_textoGeneroSeta"
            android:layout_marginTop="5dp"
            android:text="@string/comestibilidad_seta"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView_textoComestibilidadSeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_ComestibilidadSeta"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/textView_EnlaceSeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_textoComestibilidadSeta"
            android:layout_marginTop="5dp"
            android:text="@string/enlace_seta"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textView_textoEnlaceSeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_EnlaceSeta"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:autoLink="web"
            android:textColorLink="@color/black" />

        <ImageView
            android:id="@+id/imageView_setaDescrita"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/textView_textoEnlaceSeta"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:src="@mipmap/ic_launcher" />

    </RelativeLayout>
</ScrollView>