...
    <string name="texto_clave">Clave: </string>
    <string name="texto_pregunta">Seleccione la clave que mas se adecue a la seta:</string>
    <string name="texto_solucion_genero">Género clasificado:</string>
    <string name="texto_solucion_especie">Especie clasificada:</string>

    <!--6-Cadenas de los elementos de la actividad mostrar informacion seta-->
    <string name="descripcion_seta">Descripción seta:</string>
    <string name="genero_seta">Género seta:</string>
    <string name="comestibilidad_seta">Comestibilidad seta:</string>
    <string name="enlace_seta">Enlace seta:</string>

    <!--7-Cadenas de los elementos de la actividad elegir claves-->
    <string name="seleccionar_generos">Los siguientes géneros se encuentran en la clave dicotómica. Seleccione los géneros sobre los que aplicar la clave dicotómica:</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="boton_clave">Ir clave dicotómica</string>

    <!--8-Cadenas de los elementos de la actividad MostrarComparativa -->
    <string name="texto_comparativa">Comparativa entre las imágenes:</string>

    <!-- Elementos del menú -->
    <string name="titulo_menu_1">Herramientas</string>
    <string name="home">Home</string>
    <string name="clasificar">Clasificar</string>
    <string name="claves">Ir claves dicotómicas</string>
    <string name="informacion">Información setas</string>
    <string name="titulo_menu_2">Opciones</string>
    <string name="idioma">Cambiar idioma</string>
    <string name="ayuda_menu">Ayuda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Ayuda</string>

    <!--0-Cadenas de los elementos de la ayuda de lanzadora-->
    <string name="ayuda_lanzadora_0">Ayuda de la actividad principal:</string>
    <string name="ayuda_lanzadora_1">Para clasificar una foto pulse sobre el icono de la lupa.</string>
    <string name="ayuda_lanzadora_2">Para mostrar un listado de las setas disponibles pulse el icono de información.</string>
    <string name="ayuda_lanzadora_3">Para mostrar un listado de las claves dicotómicas disponibles pulse el siguiente botón.</string>
    <string name="ayuda_lanzadora_4">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--1-Cadenas de los elementos de la ayuda de recoger foto-->
    <string name="ayuda_recoger_0">Ayuda de la actividad recoger foto:</string>
    <string name="ayuda_recoger_1">Para cargar una foto desde la galería pulse el siguiente botón.</string>
    <string name="ayuda_recoger_2">Para cargar una foto desde la cámara del móvil pulse el siguiente botón.</string>
    <string name="ayuda_recoger_3">Para clasificar la foto pulse el siguiente botón (sólo aparece cuando se ha cargado una foto).</string>
...
    <string name="ayuda_clave_dicotomica_1">La página mostrará una sucesión de dilemas, deberá ir eligiendo el que considere que más se adecua a la seta hasta llegar a un género.</string>
    <string name="ayuda_clave_dicotomica_2">Para volver a la pregunta anterior pulse el siguiente botón.</string>
    <string name="ayuda_clave_dicotomica_3">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>
    <string name="ayuda_clave_dicotomica_4">Para ir a la clave de un género en concreto, pulsar el siguiente botón (Aparecera si el género clasificado se encuentra entre las claves disponibles)</string>

    <!--6-Cadenas de los elementos de la ayuda de mostrar información seta-->
    <string name="ayuda_mostrar_informacion_0">Ayuda de la actividad mostrar información:</string>
    <string name="ayuda_mostrar_informacion_1">La página mostrará información correspondiente a la seta, una descripción, el género, la comestibilidad, un enlace a la wikipedia y
    una imágen de esta seta que se podrá ampliar si se pulsa sobre ella.</string>
    <string name="ayuda_mostrar_informacion_2">Para mostrar el menú de la aplicación pulse el siguiente botón.</string>

    <!--7-Cadenas de los elementos de la ayuda de elegir claves-->

...
